# ENPM700_Group1

./: README.md  quadchart.html
phase1/: CMakeLists.txt  README.md  calibration_test.cpp  camera_calibration.ipynb  camera_calibration.py  main_test.cpp
phase1/.github/workflows/: run-unit-test-and-upload-codecov.yml
phase1/libs/: CMakeLists.txt
phase1/libs/lib1/: CMakeLists.txt  camera_model.cpp  camera_model.hpp  config_class.cpp  config_class.hpp  human_detector.cpp  human_detector.hpp  pid.cpp  pid.hpp  yolo_class.cpp  yolo_class.hpp
phase1/media/: cm_dc.csv
phase1/scripts/: test_media.sh
phase1/test/: CMakeLists.txt  main.cpp  test.cpp
